{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 255,
  "lineage": "a55ccfdf-0793-a81d-6599-570bc15622d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "iida_hakone_nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f2a6ec8453fbe260",
            "domain": "vpc",
            "id": "eipalloc-00ad3679d960e303a",
            "network_interface": "eni-01e8f2ed41d306c04",
            "private_dns": "ip-10-0-1-65.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-54-64-53-247.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.64.53.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.iida_hakone_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "iida_hakone_nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01d64f0d77d67dd79",
            "domain": "vpc",
            "id": "eipalloc-0bf768063822dfc2e",
            "network_interface": "eni-088045156f112e6eb",
            "private_dns": "ip-10-0-2-154.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.154",
            "public_dns": "ec2-52-199-84-77.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.199.84.77",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.iida_hakone_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iida_hakone_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fa5aa4f175189536",
            "owner_id": "667009429896",
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "iida_hakone",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:loadbalancer/app/iida-hakone/41cb16202f06e238",
            "arn_suffix": "app/iida-hakone/41cb16202f06e238",
            "dns_name": "iida-hakone-1340758145.ap-northeast-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:loadbalancer/app/iida-hakone/41cb16202f06e238",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "iida-hakone",
            "security_groups": [
              "sg-0497eb07ff19e4123"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b3ae1c8c3d35653f"
              },
              {
                "subnet_id": "subnet-0ef282770df356b1b"
              }
            ],
            "subnets": [
              "subnet-0b3ae1c8c3d35653f",
              "subnet-0ef282770df356b1b"
            ],
            "vpc_id": "vpc-006909dd5c8ed53ea",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "depends_on": [
            "aws_security_group.iida_hakone",
            "aws_subnet.iida_hakone_public_0",
            "aws_subnet.iida_hakone_public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:listener/app/iida-hakone/41cb16202f06e238/67960145597a0f71",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "This is http",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:listener/app/iida-hakone/41cb16202f06e238/67960145597a0f71",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:loadbalancer/app/iida-hakone/41cb16202f06e238",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "iida_hakone",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:targetgroup/iida-hakone/25123b12265590da",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:listener-rule/app/iida-hakone/41cb16202f06e238/67960145597a0f71/8022975ca90bbea1",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:listener-rule/app/iida-hakone/41cb16202f06e238/67960145597a0f71/8022975ca90bbea1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:listener/app/iida-hakone/41cb16202f06e238/67960145597a0f71",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.http",
            "aws_lb_target_group.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "iida_hakone",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:targetgroup/iida-hakone/25123b12265590da",
            "arn_suffix": "targetgroup/iida-hakone/25123b12265590da",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:667009429896:targetgroup/iida-hakone/25123b12265590da",
            "lambda_multi_value_headers_enabled": false,
            "name": "iida-hakone",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_lb.iida_hakone",
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "iida_hakone_nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ad3679d960e303a",
            "id": "nat-09f3176da19ec8712",
            "network_interface_id": "eni-01e8f2ed41d306c04",
            "private_ip": "10.0.1.65",
            "public_ip": "54.64.53.247",
            "subnet_id": "subnet-0b3ae1c8c3d35653f"
          },
          "depends_on": [
            "aws_eip.iida_hakone_nat_gateway_0",
            "aws_internet_gateway.iida_hakone_gateway",
            "aws_subnet.iida_hakone_public_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "iida_hakone_nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf768063822dfc2e",
            "id": "nat-05dff8e7b74830f9c",
            "network_interface_id": "eni-088045156f112e6eb",
            "private_ip": "10.0.2.154",
            "public_ip": "52.199.84.77",
            "subnet_id": "subnet-0ef282770df356b1b"
          },
          "depends_on": [
            "aws_eip.iida_hakone_nat_gateway_1",
            "aws_internet_gateway.iida_hakone_gateway",
            "aws_subnet.iida_hakone_public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "iida_hakone_private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00361ea90c51a1d5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-09f3176da19ec8712",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00361ea90c51a1d5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.iida_hakone_nat_gateway_0",
            "aws_route_table.iida_hakone_private_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "iida_hakone_private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0adc43b3a2f5a44ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05dff8e7b74830f9c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0adc43b3a2f5a44ff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.iida_hakone_nat_gateway_1",
            "aws_route_table.iida_hakone_private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "iida_hakone_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fa5aa4f175189536",
            "id": "r-rtb-03941bf4f52476f041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03941bf4f52476f04",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.iida_hakone_gateway",
            "aws_route_table.iida_hakone_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iida_hakone_private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00361ea90c51a1d5d",
            "owner_id": "667009429896",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-09f3176da19ec8712",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iida_hakone_private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0adc43b3a2f5a44ff",
            "owner_id": "667009429896",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-05dff8e7b74830f9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iida_hakone_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03941bf4f52476f04",
            "owner_id": "667009429896",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa5aa4f175189536",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iida_hakone_private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0014c0ea2f190afbe",
            "route_table_id": "rtb-00361ea90c51a1d5d",
            "subnet_id": "subnet-0206ea718b9cab42a"
          },
          "depends_on": [
            "aws_route_table.iida_hakone_private_0",
            "aws_subnet.iida_hakone_private_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iida_hakone_private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0747e7addb4ee3009",
            "route_table_id": "rtb-0adc43b3a2f5a44ff",
            "subnet_id": "subnet-0d8676cf09ecf3ef7"
          },
          "depends_on": [
            "aws_route_table.iida_hakone_private_1",
            "aws_subnet.iida_hakone_private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iida_hakone_public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ace1df4a71b54dc",
            "route_table_id": "rtb-03941bf4f52476f04",
            "subnet_id": "subnet-0b3ae1c8c3d35653f"
          },
          "depends_on": [
            "aws_route_table.iida_hakone_public",
            "aws_subnet.iida_hakone_public_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "iida_hakone_public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f87d8442a93992c6",
            "route_table_id": "rtb-03941bf4f52476f04",
            "subnet_id": "subnet-0ef282770df356b1b"
          },
          "depends_on": [
            "aws_route_table.iida_hakone_public",
            "aws_subnet.iida_hakone_public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "iida_hakone",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667009429896:security-group/sg-0497eb07ff19e4123",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0497eb07ff19e4123",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "iida-hakone",
            "name_prefix": null,
            "owner_id": "667009429896",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "iida_hakone_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2356450512",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0497eb07ff19e4123",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "iida_hakone_ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-50098764",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0497eb07ff19e4123",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iida_hakone_private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667009429896:subnet/subnet-0206ea718b9cab42a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "id": "subnet-0206ea718b9cab42a",
            "map_public_ip_on_launch": false,
            "owner_id": "667009429896",
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iida_hakone_private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667009429896:subnet/subnet-0d8676cf09ecf3ef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "id": "subnet-0d8676cf09ecf3ef7",
            "map_public_ip_on_launch": false,
            "owner_id": "667009429896",
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iida_hakone_public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667009429896:subnet/subnet-0b3ae1c8c3d35653f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b3ae1c8c3d35653f",
            "map_public_ip_on_launch": true,
            "owner_id": "667009429896",
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iida_hakone_public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667009429896:subnet/subnet-0ef282770df356b1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ef282770df356b1b",
            "map_public_ip_on_launch": true,
            "owner_id": "667009429896",
            "vpc_id": "vpc-006909dd5c8ed53ea"
          },
          "depends_on": [
            "aws_vpc.iida_hakone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iida_hakone",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:667009429896:vpc/vpc-006909dd5c8ed53ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0849618e1db29b949",
            "default_route_table_id": "rtb-07ed86184cc4388b9",
            "default_security_group_id": "sg-00eec8b886958c32e",
            "dhcp_options_id": "dopt-2bab3d4f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-006909dd5c8ed53ea",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07ed86184cc4388b9",
            "owner_id": "667009429896",
            "tags": {
              "Name": "iida-hakone"
            }
          }
        }
      ]
    }
  ]
}